@@ -1,3 +1,9 @@
+2004-12-17  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/proctable.c: (cb_exclude), (refresh_list): Fixed a nasty crash :
+	make sure a process is not added AND removed at the same time.
+	Closes #161350.
+
 2004-12-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in: Added "th" (Thai) to ALL_LINGUAS.
